fix overflow

--- a/src/components/menu/styles.module.scss
+++ b/src/components/menu/styles.module.scss
@@ -6,6 +6,7 @@
   padding: .5rem;
   background-color: colors.$dark-600;
   border: 1px solid colors.$dark-500;
+  max-width: 100%;
 }
 
 .view {
