--- a/src/pages/task/kanban/column/task/details/styles.module.scss
+++ b/src/pages/task/kanban/column/task/details/styles.module.scss
@@ -22,4 +22,5 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  max-width: 100%;
 }
